@@ -8,14 +8,16 @@
 +--------------------------+--------------------------+
 
 +-----------------------------------------------------+
-|                       M E N U                       |
+|      >>>>------>      M E N U      <------<<<<      |
 +-----------------------------------------------------+
 |                                                     |
 |   [ 1 ]   N O V A   H R A                           |
 |                                                     |
-|   [ 2 ]   N A P O V E D A                           |
+|   [ 2 ]   S I B E N I C N I   K R O N I K A         |
 |                                                     |
-|   [ 3 ]   K O N E C                                 |
+|   [ 3 ]   N A P O V E D A                           |
+|                                                     |
+|   [ 4 ]   K O N E C                                 |
 |                                                     |
 +-----------------------------------------------------+
     [   ]   <  Zadejte cislo polozky
